styles.css
/* font-family: 'Quicksand', sans-serif;
COLORS
light-yellow - #f7e4bf;
light-blue - #78a7c6;
dark-blue - #134d71;
white - #ffffff;
black - #000000;
*/

* {
    text-align: center;
    font-family: 'Quicksand', sans-serif;
}

html {
    background-image: linear-gradient(#134d71, #78a7c6, #f7e4bf);
    box-sizing: border-box;
    height: 100%;
}

.hidden {
    display: none;
}

.main-title {
    color: #ffffff;
}

.message-type {
    color: #ffffff;
}

.selection-box {
    display: flex;
    background-color: #ffffff;
    width: 50vh;
    height: 80px;
    margin: 4vh auto;
    border-radius: 10px;
    align-items: center;
    justify-content: space-around;
    flex-direction: column;
}

.message-box {
    width: 70vh;
    height: 12vh;
    display: flex;
    justify-content: center;
    margin-left: 60px;
    background-color: #ffffff;
    border-radius: 10px;
    align-items: center
 }

.radio-button {
    display: flex;
    color: black;
    padding: 0px 70px;
    margin-left: 30px;
}

.make-new-message {
    display: flex;
}

.login-name {

}

.user-name {

}

.login-page {

}

.yoaki {
    height: 70px;
    width: 60px;
}

